# libnesemu

./: .clang-format  .nvim.lua  CMakeLists.txt  LICENSE  readme.md
emulator/: CMakeLists.txt  main.c
emulator/src/: main.c
include/nesemu/: nesemu.h
include/nesemu/cartridge/: cartridge.h
include/nesemu/cartridge/types/: common.h  mirroring.h  nrom.h
include/nesemu/cpu/: cpu.h  instructions.h  status.h
include/nesemu/memory/: main.h  memory.h  paging.h  rom.h  stack.h  video.h
include/nesemu/ppu/: oam.h  palette.h  ppu.h
include/nesemu/support/: endian.h
include/nesemu/util/: bits.h  compat.h  error.h
src/: CMakeLists.txt
src/cartridge/: CMakeLists.txt  cartridge.c
src/cartridge/types/: mirroring.c  nrom.c
src/cpu/: CMakeLists.txt  cpu.c  decode.c  instructions.c
src/memory/: CMakeLists.txt  main.c  memory.c  rom.c  stack.c  video.c
src/ppu/: CMakeLists.txt  ppu.c
tests/: CMakeLists.txt
tests/src/: nestest.c
